updating the project structure

--- a/src/app/BackOfficePages/AdminSection/dashboard/dashboard.component.html
+++ b/src/app/BackOfficePages/AdminSection/dashboard/dashboard.component.html
@@ -74,27 +74,7 @@
             </svg>
           </a>
         </li>
-        <li>
-          <a
-            href="/dashboard/list-order-delivery"
-            class="btn btn-ghost btn-sm w-full"
-          >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="h-6 w-6"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke="currentColor"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M16 14l-4-4m0 0l-4 4m4-4v12m0-12a8 8 0 110-16 8 8 0 010 16z"
-              />
-            </svg>
-          </a>
-        </li>
+
         <li>
           <a href="/dashboard/categories" class="btn btn-ghost btn-sm w-full">
             <svg
@@ -113,8 +93,8 @@
             </svg>
           </a>
         </li>
-        <!--  <li>
-          <a routerLink="/settings" class="btn btn-ghost btn-sm w-full">
+        <li>
+          <a href="/dashboard/list-report" class="btn btn-ghost btn-sm w-full">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               class="h-6 w-6"
@@ -126,15 +106,15 @@
                 stroke-linecap="round"
                 stroke-linejoin="round"
                 stroke-width="2"
-                d="M12 8v4l2 2m-6 4h6a2 2 0 002-2V8a2 2 0 00-2-2H9a2 2 0 00-2 2v8a2 2 0 002 2z"
+                d="M16 14l-4-4m0 0l-4 4m4-4v12m0-12a8 8 0 110-16 8 8 0 010 16z"
               />
             </svg>
           </a>
-        </li> -->
+        </li>
       </ul>
     </div>
   </div>
-  <div class="flex-1 p-4 ml-14">
+  <div class="flex-1 p-6 ml-24 min-h-[35rem]">
     <router-outlet></router-outlet>
   </div>
 </div>
