adding the arting system to the product page

--- a/src/app/BackOfficePages/AdminSection/add-product/add-product.component.html
+++ b/src/app/BackOfficePages/AdminSection/add-product/add-product.component.html
@@ -84,7 +84,28 @@
         }}}
       </select>
     </div>
-
+    <div class="space-y-1">
+      <label for="colors" class="block font-semibold">Colors:</label>
+      <input
+        type="text"
+        id="colors"
+        class="input input-bordered w-full"
+        placeholder="Enter colors separated by spaces (e.g., red yellow blue)"
+        ngModel
+        name="colors"
+      />
+    </div>
+    <div class="space-y-1">
+      <label for="sizes" class="block font-semibold">Sizes:</label>
+      <input
+        type="text"
+        id="sizes"
+        class="input input-bordered w-full"
+        placeholder="Enter sizes separated by spaces (e.g., S M L XL)"
+        ngModel
+        name="sizes"
+      />
+    </div>
     <div class="space-y-1">
       <label for="image" class="block font-semibold">Product Image:</label>
       <input
